--- a/src/scss/components/_hero-wrapper.scss
+++ b/src/scss/components/_hero-wrapper.scss
@@ -720,4 +720,72 @@
             }
         }
     }
+
+    &.hero-wrapper-detail{
+        .d-grid{
+                grid-template-columns: repeat(2, 1fr);
+                max-width: 1100px;
+                margin: 0 auto;
+                gap: 45px;
+                padding: 0 15px;
+                min-height: 617px;
+
+                @media (max-width:1200px) {
+                    gap: 30px;
+                }
+
+                @media (max-width:767px) {
+                    display: block !important;
+                }
+
+                .hero-wrapper__img{
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+
+                    @media (max-width:767px) {
+                        padding-top: 110px;
+                    }
+                }
+
+
+                .hero-wrapper__content{
+                    max-width: 100%;
+                    text-align: left;
+                    align-items: start;
+                    padding: 0;
+                    min-height: auto;
+
+                    @media (max-width:767px) {
+                        margin-top: 40px;
+                        align-items: center;
+                        padding-bottom: 50px;
+                    }
+
+                    h1{
+                        font-size: 35px;
+                        color: $white;
+                        line-height: 50px;
+                        font-weight: 400;
+                        margin: 25px 0;
+
+                        @media (max-width:1200px) {
+                            font-size: 30px;
+                            line-height: 40px;
+                        }
+
+                        @media (max-width:767px) {
+                            text-align: center;
+                            margin: 40px auto;
+                            font-size: 25px;
+                            line-height: 35px;
+                        }
+                    }
+
+                    .tag{
+                        margin: 0;
+                    }
+                }
+        }
+    }
 }
