--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -278,6 +278,10 @@ header .navbar-nav .dropdown-menu li .dropdown-item {
     background-color: #0033FF;
   }
 }
+header .navbar-nav .dropdown-menu li:last-child .dropdown-item:hover img {
+  background-color: #ffffff;
+  border-radius: 100%;
+}
 header .navbar-expand-lg .navbar-collapse {
   justify-content: end;
 }
@@ -6276,6 +6280,8 @@ footer .footer-main .footer-links__2 .links {
 .services-content-wrapper .development-process-wrapper__steps {
   margin-top: 70px;
   position: relative;
+  width: -moz-fit-content;
+  width: fit-content;
 }
 @media (max-width: 991px) {
   .services-content-wrapper .development-process-wrapper__steps {
@@ -6311,7 +6317,7 @@ footer .footer-main .footer-links__2 .links {
 @media (max-width: 1300px) {
   .services-content-wrapper .development-process-wrapper__steps .step {
     width: 240px;
-    font-size: 20px;
+    font-size: 18px;
   }
 }
 @media (max-width: 1200px) {
@@ -6337,7 +6343,7 @@ footer .footer-main .footer-links__2 .links {
 .services-content-wrapper .development-process-wrapper__steps .step:hover {
   background-color: #0033FF;
 }
-.services-content-wrapper .development-process-wrapper__steps .step:nth-child(6):after {
+.services-content-wrapper .development-process-wrapper__steps .step:nth-last-child(2):after {
   content: "";
   position: absolute;
   top: 0;
@@ -6349,17 +6355,17 @@ footer .footer-main .footer-links__2 .links {
   z-index: -1;
 }
 @media (max-width: 1300px) {
-  .services-content-wrapper .development-process-wrapper__steps .step:nth-child(6):after {
-    right: 90px;
+  .services-content-wrapper .development-process-wrapper__steps .step:nth-last-child(2):after {
+    right: 120px;
   }
 }
 @media (max-width: 1200px) {
-  .services-content-wrapper .development-process-wrapper__steps .step:nth-child(6):after {
-    right: 85px;
+  .services-content-wrapper .development-process-wrapper__steps .step:nth-last-child(2):after {
+    right: 100px;
   }
 }
 @media (max-width: 991px) {
-  .services-content-wrapper .development-process-wrapper__steps .step:nth-child(6):after {
+  .services-content-wrapper .development-process-wrapper__steps .step:nth-last-child(2):after {
     display: none;
   }
 }
@@ -6376,12 +6382,12 @@ footer .footer-main .footer-links__2 .links {
 }
 @media (max-width: 1300px) {
   .services-content-wrapper .development-process-wrapper__steps .step:last-child:after {
-    right: -30px;
+    right: 0;
   }
 }
 @media (max-width: 1200px) {
   .services-content-wrapper .development-process-wrapper__steps .step:last-child:after {
-    right: -15px;
+    right: 0;
   }
 }
 @media (max-width: 991px) {
