--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -60,6 +60,11 @@ img{
     position: relative;
 }
 
+.common-link{
+  color: $blue;
+  text-decoration: none;
+}
+
 .container{
     width: 100%;
     padding: 0 30px;
