Fixing UI issues

--- a/src/scss/components/_blog-listing.scss
+++ b/src/scss/components/_blog-listing.scss
@@ -123,7 +123,10 @@
             font-family: $font;
             letter-spacing: 0.03em;
             align-items: center;
-            opacity: 0.6;
+
+            div{
+                opacity: 0.6;
+            }
 
             .tag{
                 background-color: $blue;
@@ -133,6 +136,7 @@
                 font-family: $font;
                 text-transform: uppercase;
                 letter-spacing: 0.03em;
+                opacity: 1;
             }
 
             span:first-child{
