--- a/src/scss/components/_hero-wrapper.scss
+++ b/src/scss/components/_hero-wrapper.scss
@@ -133,6 +133,7 @@
             width: 171px;
             margin: 0 25px;
             transition: all .3s;
+            cursor: pointer;
 
             @media (max-width:991px) {
                 margin: 0 20px;
