Added 404 & Umbraco partner component

--- a/src/scss/components/_variables-&-common.scss
+++ b/src/scss/components/_variables-&-common.scss
@@ -10,6 +10,7 @@ $black_7: #232323;
 $black_8:#2B2B2B;
 $black_9: #181818;
 $blue: #0033FF;
+$blue_1: #3544B1;
 $fbbg:#0766FF;
 $linkdinbg:#0066C8;
 $instabg:linear-gradient(
