--- a/src/scss/components/_hero-wrapper.scss
+++ b/src/scss/components/_hero-wrapper.scss
@@ -144,6 +144,7 @@
                 bottom: 0;
                 width: 100%;
                 margin: 0 auto;
+                left: 0;
             }
 
             @media (max-width:425px) {
