--- a/src/scss/components/_service-detail-wrapper.scss
+++ b/src/scss/components/_service-detail-wrapper.scss
@@ -136,6 +136,7 @@
                 bottom: 35px;
                 position: absolute;
                 left: 35px;
+                min-width: 160px;
 
                 @media (max-width: 991px) {
                    left: 20px;
@@ -1422,7 +1423,7 @@
             }
 
             .step{
-                font-size: 22px;
+                font-size: 20px;
                 color: $white;
                 font-family: $font;
                 font-weight: 300;
@@ -2184,4 +2185,138 @@
         }
     }
 }
+
+
+
+    .partners-wrapper{
+        margin: 0 auto 150px auto;
+        background-color: $blue_1;
+        padding: 60px;
+        border-radius: 40px;
+
+        @media (max-width:1200px) {
+            margin: 0 auto 100px auto;
+            padding: 40px;
+            border-radius: 30px;
+        } 
+
+        @media (max-width:700px) {
+            margin: 0 auto 100px auto;
+            padding: 35px 20px;
+            border-radius: 20px;
+        } 
+
+        .d-flex{
+            gap: 10%;
+            align-items: center;
+
+            @media (max-width:1300px) {
+                gap: 2%;
+            }
+
+            @media (max-width:700px) {
+                flex-direction: column;
+                gap: 50px;
+                text-align: center;
+            }
+        }
+
+        .col-1{
+            width: 55%;
+
+            @media (max-width:1300px) {
+                width: 59%;
+            }
+
+            @media (max-width:700px) {
+                width: 100%;
+            }
+        }
+
+        .col-2{
+            width: 35%;
+            text-align: center;
+
+            @media (max-width:1300px) {
+                width: 39%;
+            }
+
+            @media (max-width:700px) {
+                width: 100%;
+            }
+        }
+
+        h3{
+            margin-bottom: 60px;
+
+            @media (max-width:1300px) {
+                margin-bottom: 40px;
+            }
+
+            @media (max-width:700px) {
+                font-size: 40px;
+                line-height: 45px;
+                margin-bottom: 50px;
+            }
+        }
+
+        &__img{
+            img{
+                    &:nth-child(2){
+                    margin: 0 50px;
+
+                        @media (max-width:1300px) {
+                            margin: 0 30px;
+                        }
+
+                        @media (max-width:991px) {
+                            margin: 0 15px;
+                        } 
+
+                        @media (max-width:767px) {
+                            margin: 20px 50px;
+                        }
+                        
+                        @media (max-width:700px) {
+                            margin: 27px auto;
+                        }
+                    }
+
+                @media (max-width:1200px) {
+                    max-width: 200px;
+                } 
+                
+                @media (max-width:991px) {
+                    max-width: 160px;
+                } 
+
+                @media (max-width:767px) {
+                    display: block;
+                } 
+            }
+
+            @media (max-width:700px) {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+            }
+        }
+
+        p{
+            margin-top: 40px;
+            margin-bottom: 0;
+
+            @media (max-width:1200px) {
+                font-size: 16px;
+                line-height: 30px;
+            }
+
+            @media (max-width:700px) {
+                font-size: 14px;
+                line-height: 25px;
+                margin-top: 50px;
+            }
+        }
+    }
 
