--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -1591,6 +1591,7 @@ footer .footer-main .footer-links__2 .links {
     bottom: 0;
     width: 100%;
     margin: 0 auto;
+    left: 0;
   }
 }
 @media (max-width: 425px) {
@@ -2705,7 +2706,7 @@ footer .footer-main .footer-links__2 .links {
   padding: 20px 0 100px;
   background-color: #000000;
   overflow: hidden;
-  min-height: 800px;
+  min-height: 700px;
 }
 @media (max-width: 1210px) {
   .why-choose-us-wrapper {
@@ -2983,7 +2984,7 @@ footer .footer-main .footer-links__2 .links {
 .why-choose-us-wrapper .step-2, .why-choose-us-wrapper .step-3 {
   top: 0;
   position: absolute;
-  height: 800px;
+  padding: 50px 0;
   width: 100%;
   left: 0;
   right: 0;
@@ -3079,6 +3080,7 @@ footer .footer-main .footer-links__2 .links {
   transition: all 0.8s ease;
   opacity: 1;
   position: absolute;
+  bottom: 0;
 }
 @media (max-width: 1209px) {
   .why-choose-us-wrapper.third .col-2 .content-2 {
@@ -3089,28 +3091,28 @@ footer .footer-main .footer-links__2 .links {
   text-align: right;
 }
 .why-choose-us-wrapper.third .arrow-images {
-  transform: translateY(-320px) translatex(260px) !important;
+  transform: translateY(-370px) translatex(260px) !important;
   z-index: 8;
   max-width: 320px !important;
 }
 @media (max-width: 1300px) {
   .why-choose-us-wrapper.third .arrow-images {
-    transform: translateY(-320px) translatex(266px) !important;
+    transform: translateY(-370px) translatex(266px) !important;
   }
 }
 @media (max-width: 1298px) {
   .why-choose-us-wrapper.third .arrow-images {
-    transform: translateY(-320px) translatex(253px) !important;
+    transform: translateY(-370px) translatex(253px) !important;
   }
 }
 @media (max-width: 1260px) {
   .why-choose-us-wrapper.third .arrow-images {
-    transform: translateY(-320px) translatex(265px) !important;
+    transform: translateY(-370px) translatex(265px) !important;
   }
 }
 @media (max-width: 1230px) {
   .why-choose-us-wrapper.third .arrow-images {
-    transform: translateY(-320px) translatex(265px) !important;
+    transform: translateY(-370px) translatex(265px) !important;
   }
 }
 .why-choose-us-wrapper.third .arrow-images .arrow-bg-img {
@@ -5074,6 +5076,7 @@ footer .footer-main .footer-links__2 .links {
   bottom: 35px;
   position: absolute;
   left: 35px;
+  min-width: 160px;
 }
 @media (max-width: 991px) {
   .service-detail-wrapper .box-items.grid-1 .item .btn, .services-content-wrapper .box-items.grid-1 .item .btn {
@@ -6327,7 +6330,7 @@ footer .footer-main .footer-links__2 .links {
   }
 }
 .services-content-wrapper .development-process-wrapper__steps .step {
-  font-size: 22px;
+  font-size: 20px;
   color: #ffffff;
   font-family: "Nohemi";
   font-weight: 300;
@@ -7351,6 +7354,238 @@ footer .footer-main .footer-links__2 .links {
 @media (max-width: 767px) {
   .services-content-wrapper .benefits-wrapper .d-grid:last-child {
     padding: 40px 0 0 0;
+  }
+}
+
+.partners-wrapper {
+  margin: 0 auto 150px auto;
+  background-color: #3544B1;
+  padding: 60px;
+  border-radius: 40px;
+}
+@media (max-width: 1200px) {
+  .partners-wrapper {
+    margin: 0 auto 100px auto;
+    padding: 40px;
+    border-radius: 30px;
+  }
+}
+@media (max-width: 700px) {
+  .partners-wrapper {
+    margin: 0 auto 100px auto;
+    padding: 35px 20px;
+    border-radius: 20px;
+  }
+}
+.partners-wrapper .d-flex {
+  gap: 10%;
+  align-items: center;
+}
+@media (max-width: 1300px) {
+  .partners-wrapper .d-flex {
+    gap: 2%;
+  }
+}
+@media (max-width: 700px) {
+  .partners-wrapper .d-flex {
+    flex-direction: column;
+    gap: 50px;
+    text-align: center;
+  }
+}
+.partners-wrapper .col-1 {
+  width: 55%;
+}
+@media (max-width: 1300px) {
+  .partners-wrapper .col-1 {
+    width: 59%;
+  }
+}
+@media (max-width: 700px) {
+  .partners-wrapper .col-1 {
+    width: 100%;
+  }
+}
+.partners-wrapper .col-2 {
+  width: 35%;
+  text-align: center;
+}
+@media (max-width: 1300px) {
+  .partners-wrapper .col-2 {
+    width: 39%;
+  }
+}
+@media (max-width: 700px) {
+  .partners-wrapper .col-2 {
+    width: 100%;
+  }
+}
+.partners-wrapper h3 {
+  margin-bottom: 60px;
+}
+@media (max-width: 1300px) {
+  .partners-wrapper h3 {
+    margin-bottom: 40px;
+  }
+}
+@media (max-width: 700px) {
+  .partners-wrapper h3 {
+    font-size: 40px;
+    line-height: 45px;
+    margin-bottom: 50px;
+  }
+}
+.partners-wrapper__img img:nth-child(2) {
+  margin: 0 50px;
+}
+@media (max-width: 1300px) {
+  .partners-wrapper__img img:nth-child(2) {
+    margin: 0 30px;
+  }
+}
+@media (max-width: 991px) {
+  .partners-wrapper__img img:nth-child(2) {
+    margin: 0 15px;
+  }
+}
+@media (max-width: 767px) {
+  .partners-wrapper__img img:nth-child(2) {
+    margin: 20px 50px;
+  }
+}
+@media (max-width: 700px) {
+  .partners-wrapper__img img:nth-child(2) {
+    margin: 27px auto;
+  }
+}
+@media (max-width: 1200px) {
+  .partners-wrapper__img img {
+    max-width: 200px;
+  }
+}
+@media (max-width: 991px) {
+  .partners-wrapper__img img {
+    max-width: 160px;
+  }
+}
+@media (max-width: 767px) {
+  .partners-wrapper__img img {
+    display: block;
+  }
+}
+@media (max-width: 700px) {
+  .partners-wrapper__img {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+}
+.partners-wrapper p {
+  margin-top: 40px;
+  margin-bottom: 0;
+}
+@media (max-width: 1200px) {
+  .partners-wrapper p {
+    font-size: 16px;
+    line-height: 30px;
+  }
+}
+@media (max-width: 700px) {
+  .partners-wrapper p {
+    font-size: 14px;
+    line-height: 25px;
+    margin-top: 50px;
+  }
+}
+
+.page-not-found-wrapper {
+  min-height: 100vh;
+  padding: 200px 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+@media (max-width: 991px) {
+  .page-not-found-wrapper {
+    padding: 150px 20px;
+    text-align: center;
+  }
+}
+@media (max-width: 600px) {
+  .page-not-found-wrapper {
+    text-align: left;
+    justify-content: left;
+    align-items: flex-start;
+  }
+}
+.page-not-found-wrapper .d-flex {
+  gap: 30px;
+}
+@media (max-width: 991px) {
+  .page-not-found-wrapper .d-flex {
+    flex-direction: column;
+    gap: 70px;
+  }
+}
+.page-not-found-wrapper h1, .page-not-found-wrapper p {
+  color: #ffffff;
+  font-family: "Nohemi";
+}
+.page-not-found-wrapper h1 {
+  font-size: 190px;
+  font-weight: 400;
+  line-height: 171px;
+}
+@media (max-width: 1300px) {
+  .page-not-found-wrapper h1 {
+    font-size: 130px;
+    line-height: 110px;
+  }
+}
+@media (max-width: 991px) {
+  .page-not-found-wrapper h1 {
+    font-size: 90px;
+    line-height: 100%;
+  }
+}
+.page-not-found-wrapper p {
+  font-size: 30px;
+  font-weight: 400;
+  line-height: 40px;
+  max-width: 50%;
+}
+@media (max-width: 1300px) {
+  .page-not-found-wrapper p {
+    font-size: 25px;
+    line-height: 35px;
+  }
+}
+@media (max-width: 991px) {
+  .page-not-found-wrapper p {
+    max-width: 100%;
+  }
+}
+.page-not-found-wrapper .right-col p {
+  margin-left: 30px;
+}
+@media (max-width: 991px) {
+  .page-not-found-wrapper .right-col p {
+    margin-left: 0;
+  }
+}
+@media (max-width: 1300px) {
+  .page-not-found-wrapper .right-col img {
+    max-width: 80%;
+  }
+}
+.page-not-found-wrapper .btn-blue {
+  margin: 40px auto 0;
+}
+@media (max-width: 600px) {
+  .page-not-found-wrapper .btn-blue {
+    margin: 40px 0 0;
   }
 }
 
