--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -22,6 +22,7 @@
 @import "components/gallery";
 @import "components/content-wrapper";
 @import "components/service-detail-wrapper";
+@import "components/page-not-found";
 
 
 
